docs/sources/k6/v0.52.x/shared/javascript-api/jslib.md
---
title: javascript-api/jslib
---

[jslib](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/jslib) is a collection of JavaScript libraries maintained by the k6 team that can be used in k6 scripts.

| Library                                                                                                                        | Description                                                                                                            |
| ------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------- |
| [aws](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/jslib/aws)                                                       | Library allowing to interact with Amazon AWS services                                                                  |
| [httpx](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/jslib/httpx)                                                   | Wrapper around [k6/http](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/#k6http) to simplify session handling |
| [k6chaijs](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/jslib/k6chaijs)                                             | BDD assertion style                                                                                                    |
| [http-instrumentation-pyroscope](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/jslib/http-instrumentation-pyroscope) | Library to instrument k6/http to send baggage headers for pyroscope to read back                                       |
| [http-instrumentation-tempo](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/jslib/http-instrumentation-tempo)         | Library to instrument k6/http to send tracing data                                                                     |
| [utils](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/jslib/utils)                                                   | Small utility functions useful in every day load testing                                                               |
